--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,18 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldDefender"
         mc:Ignorable="d"
-        Title="World Defender" Height="500" Width="350" ResizeMode="CanMinimize" ShowInTaskbar="False" Topmost="True" WindowStartupLocation="CenterScreen" Icon="/wd.png" WindowStyle="None">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="7"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Ellipse Fill="Red" Grid.Row="0" Height="15" Width="15" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,0" MouseLeftButtonDown="closeApp" ToolTip="Close" Cursor="Hand"></Ellipse>
-        <Ellipse Fill="Yellow" Grid.Row="0" Height="15" Width="15" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,25,0" MouseLeftButtonDown="minimizeApp" ToolTip="Minimized" Cursor="Hand"></Ellipse>
 
     </Grid>
-    <Window.Background>
-        <ImageBrush ImageSource="/blackBg.jpg" Stretch="UniformToFill"/>
-    </Window.Background>
 </Window>
