--- a/wpf-game/MainWindow.xaml
+++ b/wpf-game/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorldDefender"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="World Defender" Height="500" Width="350" ResizeMode="CanMinimize" ShowInTaskbar="False" Topmost="True" WindowStartupLocation="CenterScreen" Icon="/wd.png" WindowStyle="None">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition Height="Auto"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Ellipse Fill="Red" Grid.Row="0" Height="15" Width="15" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,0" MouseLeftButtonDown="closeApp" ToolTip="Close" Cursor="Hand"></Ellipse>
+        <Ellipse Fill="Yellow" Grid.Row="0" Height="15" Width="15" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,25,0" MouseLeftButtonDown="minimizeApp" ToolTip="Minimized" Cursor="Hand"></Ellipse>
+        <Image HorizontalAlignment="Center" Height="115" Margin="0,125,0,0" Grid.Row="1" VerticalAlignment="Top" Width="114" Source="/WhiteUrhajo.png" KeyDown="KeyIsDown" KeyUp="KeyIsUp"/>
 
     </Grid>
+    <Window.Background>
+        <ImageBrush ImageSource="/blackBg.jpg" Stretch="UniformToFill"/>
+    </Window.Background>
 </Window>
